[package]
name = "wasm-markdown"
version = "0.1.0"
authors = ["KeisukeToyota <hm.pudding0715@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
pulldown-cmark = {version = "0.8", default-features = false}

[dependencies.web-sys]
features = [
  'Window',
]
version = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ["-Oz", "--enable-mutable-globals"]